Fix layout of blog post intro on mobile, improve legibility of header text

--- a/css/600.less
+++ b/css/600.less
@@ -48,6 +48,10 @@ body {
     .post-header {
         text-align: left;
     }
+
+    .post-intro {
+        margin-right: 3em;
+    }
 }
 
 pre {
