--- a/css/992.less
+++ b/css/992.less
@@ -30,3 +30,9 @@ pre {
     margin-right: 6em;
     margin-left: 6em;
 }
+
+.post {
+    .post-intro {
+        margin-right: 6em;
+    }
+}
