--- a/css/base.less
+++ b/css/base.less
@@ -70,7 +70,7 @@ hr {
 
         &.loaded {
             .transition(0.6s 0.1s);
-            opacity: 1;
+            opacity: 0.7;
         }
     }
 
