--- a/css/sections/blog.less
+++ b/css/sections/blog.less
@@ -4,7 +4,7 @@
         line-height: 1.4;
         font-size: 24px;
         color: @color-text-faded;
-        margin: 0px 6em 1em 0em;
+        margin: 0 0 1em 0;
         padding: 0 0 0;
         border-bottom: 3px double #ddd;
     }
@@ -29,7 +29,6 @@
     .post-content {
         ul {
             list-style: disc;
-            padding: 0 0 0 40px;
             margin: 0 0 1em;
         }
     }
